next js option removed

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "appunix",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://maruti-d.github.io/appunix",
+  "homepage": "https://www.appunix.com",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
