--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
